--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="30dp">
 
         <TextView
             android:id="@+id/txtTitle"
@@ -50,19 +51,20 @@
             app:srcCompat="@drawable/ic_next_arrow"
             app:tint="#000000" />
 
+
         <TextView
             android:id="@+id/txtDescription"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="12dp"
             android:text="@string/description_one_piece"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/txtTitle"
             app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
-
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView2"
@@ -142,11 +144,12 @@
 
         <ImageButton
             android:id="@+id/btPlayPause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginStart="16dp"
             android:background="@android:color/transparent"
             android:padding="4dp"
+            android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="@+id/seekBar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/seekBar"
@@ -168,7 +171,10 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:progressBackgroundTint="#000000"
+            android:progressTint="#000000"
+            android:thumbTint="#FD255F"
+            app:layout_constraintEnd_toStartOf="@+id/txtTimer"
             app:layout_constraintStart_toEndOf="@+id/btPlayPause"
             app:layout_constraintTop_toBottomOf="@+id/webView" />
 
@@ -176,6 +182,7 @@
             android:id="@+id/imageView2"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="@+id/txtDescription"
             app:layout_constraintTop_toTopOf="@+id/txtDescription"
             app:srcCompat="@drawable/a3" />
@@ -207,6 +214,18 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/txtTimer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:text="0.00/0.00"
+            android:textColor="@color/black"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/seekBar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
